# mlops-workflow

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci-checks.yaml  ci-checks.yml  python-tests.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  train.py
backend/conf/: app_config.py  config.yaml  train_config.py
backend/conf/augmentation/: default.yaml
backend/conf/optimizer/: adam.yaml  sgd.yaml
backend/conf/scheduler/: cosine.yaml  none.yaml  step.yaml
backend/dataloaders/: dataloader.py
backend/loggers/: logger.py
backend/models/: model.py
backend/preprocess/: preprocess.py
backend/routers/: api_router.py
backend/schemas/: __init__.py  request_schema.py  result_schema.py
backend/schemas/enums/: __init__.py  enum.py
backend/services/: artifact_service.py  inference_service.py  messages.py  train_service.py
backend/tests/: conftest.py  test_api_smoke.py
backend/tests/dataloaders/: test_dataloaders.py
backend/tests/integration/: test_integration.py
backend/tests/models/: test_models.py
backend/tests/services/: test_artifact_service.py  test_inference_service.py  test_train_service.py
minio/: create-bucket.sh
mlflow/: Dockerfile  requirements.txt
