[project]
name = "mlops-workflow"
version = "0.1.0"
description = "Modular MLOps Workflow with FastAPI, MLflow, MinIO, PostgreSQL, PyTorch, Hydra, and Pydantic."
authors = ["Willy Fitra Hendria <your@email.com>"]
requires-python = ">=3.10, <3.13"

[project.dependencies]
pytest = "8.2.0"
pytest-asyncio = "0.23.6"
pydantic = "1.10.15"
mlflow = "2.12.1"
cloudpickle = "3.0.0"
numpy = "1.26.4"
packaging = "24.0"
pandas = "2.2.2"
pynvml = "11.5.0"
pyyaml = "6.0.1"
torch = "2.3.0"
torchvision = "0.18.0"
torchaudio = "2.3.0"
tqdm = "4.66.2"
psutil = "5.9.8"
python-multipart = "0.0.9"
hydra-core = "1.3.2"
pre-commit = "3.7.0"

[tool.uv]
# Optional: uv-specific settings can go here
